fix: navbar items alignment

--- a/src/components/layout/Navbar/navbar.module.scss
+++ b/src/components/layout/Navbar/navbar.module.scss
@@ -12,8 +12,8 @@
 
 .Navbar_inner {
   display: flex;
-  align-items: center;
-  gap: use-space('s4');
+  align-items: baseline;
+  gap: use-space("s4");
   width: 100%;
 }
 
